# GraphicsEngine

./: Cargo.toml
crates/engine/app/: Cargo.toml
crates/engine/app/src/: app.rs  lib.rs  light.wgsl  ressources.rs  shader.wgsl  state.rs
crates/engine/assets/: Cargo.toml
crates/engine/assets/src/: asset_manager.rs  data_structures.rs  lib.rs
crates/engine/camera/: Cargo.toml
crates/engine/camera/src/: camera.rs  camera_controller.rs  lib.rs
crates/engine/ecs/: Cargo.toml
crates/engine/ecs/src/: ecs_manager.rs  lib.rs
crates/engine/ecs/src/ecs_bundles/: fly_camera.rs  lights.rs  mod.rs  sprite3_d.rs
crates/engine/ecs/src/ecs_components/: assets.rs  camera.rs  collider.rs  info.rs  lights.rs  mod.rs  transform.rs
crates/engine/ecs/src/ecs_resources/: camera_uniform.rs  frame_context.rs  game_state.rs  input.rs  mod.rs
crates/engine/ecs/src/ecs_systems/: camera_matrix_system.rs  fly_camera_controller_system.rs  input_clean_up_system.rs  input_mapping_system.rs  mod.rs  sync_camera_uniform_system.rs  sync_lights_uniform_system.rs
crates/engine/gpu_types/: Cargo.toml
crates/engine/gpu_types/src/: camera_uniform.rs  instance_raw.rs  lib.rs  lights_uniform.rs  material_uniform.rs  model_matrix_uniform.rs  traits.rs  vertex_ptn.rs
crates/engine/render/: Cargo.toml
crates/engine/render/src/: lib.rs  pipeline_builder.rs  renderer.rs
crates/engine/render/src/shaders/: standard.wgsl
crates/engine/scene/src/: actor.rs  prop.rs
crates/engine/textures/: Cargo.toml
crates/engine/textures/src/: instance.rs  lib.rs  model.rs  texture.rs
crates/engine/ui/: Cargo.toml
crates/game/: Cargo.toml
crates/game/src/: game.rs  lib.rs
crates/game/src/systems/: mod.rs  switch_game_state_system.rs
crates/game/src/ui/: hud.rs  main_menu.rs  mod.rs  pause_menu.rs  stats.rs
ressources/assets/: asset_manifest.json
ressources/keybindings/: README.md  keybindings.json
src/: main.rs
