[workspace]

members = [
    "crates/engine/app",
    "crates/engine/ui",
    "crates/engine/textures",
    "crates/game",
]
resolver = "2"

[workspace.dependencies]
anyhow = "1.0"
winit = { version = "0.30", features = ["android-native-activity", "serde"] }
env_logger = "0.10"
log = "0.4"
wgpu = "27.0"
pollster = "0.3"
bytemuck = { version = "1.24", features = [ "derive" ] }
image = { version = "0.24", default-features = false, features = ["png", "jpeg"] }
puffin = "0.19" 
puffin_http = "0.16"
egui = "0.33"
egui-winit = "0.33"
egui-wgpu = "0.33"
glam = { version = "0.32", features = ["std"] }
bevy_ecs = "0.18"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
fs_extra = "1.2"
glob = "0.3"
tobj = { version = "3.2", default-features = false, features = ["async"]}


[build-dependencies]
anyhow.workspace = true
fs_extra.workspace = true
glob.workspace = true

[package]
name = "playground"
version = "0.1.0"
edition = "2024"

[dependencies]
# Link your local crates to the main executable
engine_app = { path = "crates/engine/app" }
engine_ui = { path = "crates/engine/ui" }
game = { path = "crates/game" }

# Inherit shared dependencies from the workspace
anyhow.workspace = true
winit.workspace = true
glob.workspace = true
env_logger.workspace = true
pollster = "0.3" 

[profile.release]
strip = true

