[package]
name = "game"
version = "0.1.0"
edition = "2024"

[dependencies]
engine_app = { path = "../engine/app" }
engine_camera = { path = "../engine/camera" }
engine_ecs = {path = "../engine/ecs" }
engine_assets = { path = "../engine/assets" }

wgpu.workspace = true
winit.workspace = true
log.workspace = true
anyhow.workspace = true
pollster.workspace = true
bytemuck.workspace = true
image.workspace = true
env_logger.workspace = true
egui.workspace = true
egui-winit.workspace = true
egui-wgpu.workspace = true
glam.workspace = true
serde.workspace = true
serde_json.workspace = true
bevy_ecs.workspace = true
