[package]
name = "engine_app"
version = "0.1.0"
edition = "2024"

[dependencies]
wgpu.workspace = true
winit.workspace = true
log.workspace = true
anyhow.workspace = true
pollster.workspace = true
bytemuck.workspace = true
image.workspace = true
env_logger.workspace = true
egui.workspace = true
egui-winit.workspace = true
egui-wgpu.workspace = true
