[package]
name = "engine_app"
version = "0.1.0"
edition = "2024"

[dependencies]
engine_textures = { path = "../textures" }
engine_camera = { path = "../camera" }
engine_gpu_types = { path = "../gpu_types" }
engine_assets = { path = "../assets" }
wgpu.workspace = true
winit.workspace = true
log.workspace = true
glam.workspace = true
anyhow.workspace = true
pollster.workspace = true
bytemuck.workspace = true
image.workspace = true
env_logger.workspace = true
egui.workspace = true
egui-winit.workspace = true
egui-wgpu.workspace = true
tobj.workspace = true
