[package]
name = "engine_textures"
version = "0.1.0"
edition = "2024"

[dependencies]
engine_gpu_types = { path = "../gpu_types" }
glam.workspace = true
wgpu.workspace = true
log.workspace = true
anyhow.workspace = true
pollster.workspace = true
bytemuck.workspace = true
image.workspace = true
env_logger.workspace = true
